--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # mdBook
 book
 
+# mdbook-i18n-helpers
+po/messages.pot
+
 #region https://github.com/github/gitignore/blob/main/Go.gitignore
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
