--- a/book.toml
+++ b/book.toml
@@ -1,13 +1,18 @@
 [book]
-authors = ["Jacob Hummer"]
+authors = ["Mark McGranaghan", "Jacob Hummer"]
 language = "en"
 multilingual = false
 src = "src"
 title = "Go by Example"
 
+[build]
+extra-watch-dirs = ["po"]
+
+[preprocessor.gettext]
+after = ["links"]
+
 [output.html]
 git-repository-url = "https://github.com/jcbhmr/gobyexample.jcbhmr.com"
-edit-url-template = "https://github.com/jcbhmr/gobyexample.jcbhmr.com/edit/main/{path}"
 additional-css = ["theme/custom.css"]
 
 [output.html.playground]
