--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,7 @@
 {
     "image": "mcr.microsoft.com/devcontainers/go:bookworm",
     "features": {
-        "ghcr.io/devcontainers/features/rust": {},
-        "ghcr.io/devcontainers/features/desktop-lite": {}
+        "ghcr.io/devcontainers/features/rust": {}
     },
-    "forwardPorts": [6080],
-    "portsAttributes": {
-        "6080": { "label": "desktop" }
-    },
-    "runArgs": ["--shm-size=1g"],
-    "updateContentCommand": "cargo install mdbook mdbook-i18n-helpers i18n-report cloud-translate && sudo apt-get update && sudo apt-get install -y poedit"
+    "updateContentCommand": "cargo install mdbook mdbook-i18n-helpers i18n-report"
 }
