--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: po/messages.pot
-    translation: po/%locale%.po
+  - source: /po/messages.pot
+    translation: /po/%locale%.po
