--- a/book.toml
+++ b/book.toml
@@ -14,6 +14,7 @@ after = ["links"]
 [output.html]
 git-repository-url = "https://github.com/jcbhmr/gobyexample.jcbhmr.com"
 edit-url-template = "https://github.com/jcbhmr/gobyexample.jcbhmr.com/edit/main/{{path}}"
+additional-js = ["theme/custom.js"]
 
 [output.html.playground]
 editable = true
