--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,3 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/go:bookworm",
-    "features": {
-        "ghcr.io/devcontainers/features/rust": {}
-    },
-    "updateContentCommand": "cargo install mdbook"
+    "updateContentCommand": "curl -fsSL https://github.com/gohugoio/hugo/releases/download/v0.142.0/hugo_extended_0.142.0_linux-amd64.tar.gz -o \"${t=$(mktemp --suffix .tar.gz)}\" && sudo mkdir -p /usr/local/hugo/bin && sudo tar -xzf \"$t\" -C /usr/local/hugo/bin && rm \"$t\""
 }
